final commit for web section

--- a/expresso-rest/src/main/resources/static/index.html
+++ b/expresso-rest/src/main/resources/static/index.html
@@ -14,12 +14,9 @@
   <main>
     <div class="panel">
       <header>Editor</header>
-      <textarea id="editor">public class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello from Expresso!");
-    }
-}
-</textarea>
+      <textarea id="editor">
+      System.out.println("Hello from Expresso!");
+      </textarea>
       <div class="toolbar">
         <button id="btnTranspile">Transpile</button>
         <button id="btnBuild">Build</button>
