Create multi-page Drunkitties marketing site

--- a/expresso-rest/src/main/resources/static/productos.html
+++ b/expresso-rest/src/main/resources/static/productos.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Drunkitties Studio · Recuerdos personalizados para tu mascota</title>
+  <title>Catálogo de productos · Drunkitties Studio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body data-page="home">
+<body data-page="productos">
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="index.html">🐾 Drunkitties</a>
@@ -32,52 +32,44 @@
   </header>
 
   <main class="page">
-    <section class="hero container">
-      <div class="hero-text">
-        <span class="tag">Hecho con amor por Drunkitties Studio</span>
-        <h1>Convierte a tu mascota en la protagonista de tu espacio.</h1>
-        <p>Crea artículos únicos ilustrados con la personalidad de tu compañero peludo. Mousepads, tazas, hoodies y más, hechos a medida para ti.</p>
-        <div class="hero-actions">
-          <a class="btn" href="personalizar.html">Comenzar a personalizar</a>
-          <a class="btn btn-secondary" href="productos.html">Ver catálogo completo</a>
-        </div>
-      </div>
-      <div class="hero-preview">
-        <div class="preview-card">
-          <span class="preview-tag">Diseños listos en 48 h</span>
-          <img src="assets/mock-hero.svg" alt="Ejemplo de productos personalizados" />
-          <div class="preview-info">
-            <h2>Kit creativo</h2>
-            <p>Elige estilo, tamaño y acabado profesional.</p>
-          </div>
-        </div>
+    <section class="page-heading container">
+      <span class="tag">Catálogo de productos</span>
+      <h1>Personaliza tu estilo con el encanto de tu mascota</h1>
+      <p>Selecciona tu producto favorito, elige un estilo artístico y dale vida a tus recuerdos.</p>
+      <div class="pill-group">
+        <button class="pill pill-active">Todos</button>
+        <button class="pill">Mousepad</button>
+        <button class="pill">Taza</button>
+        <button class="pill">Camiseta</button>
+        <button class="pill">Hoodie</button>
       </div>
     </section>
 
-    <section class="container feature-grid">
-      <article class="feature">
-        <span class="icon">🎨</span>
-        <h3>Ilustraciones a medida</h3>
-        <p>Artistas especializados en retratos de mascotas listos para recrear sus gestos favoritos.</p>
+    <section class="container product-grid">
+      <article class="product-card">
+        <span class="product-tag">🐾 Mousepad personalizado</span>
+        <h2>€8,000</h2>
+        <p>Superficie suave antideslizante con ilustración exclusiva de tu mascota.</p>
+        <a class="btn" href="personalizar.html">Personalizar</a>
       </article>
-      <article class="feature">
-        <span class="icon">⚡</span>
-        <h3>Proceso guiado</h3>
-        <p>Carga tu foto, elige un estilo y visualiza la magia con nuestra vista previa automática.</p>
+      <article class="product-card">
+        <span class="product-tag">☕ Taza personalizada</span>
+        <h2>€6,600</h2>
+        <p>Cerámica premium lista para llenar tus mañanas de ronroneos.</p>
+        <a class="btn" href="personalizar.html">Personalizar</a>
       </article>
-      <article class="feature">
-        <span class="icon">📦</span>
-        <h3>Envío con seguimiento</h3>
-        <p>Recibe tu pedido en casa con empaques sustentables y seguimiento en tiempo real.</p>
+      <article class="product-card">
+        <span class="product-tag">👕 Camiseta personalizada</span>
+        <h2>€12,000</h2>
+        <p>Algodón orgánico ultra suave con impresión resistente y llena de color.</p>
+        <a class="btn" href="personalizar.html">Personalizar</a>
       </article>
-    </section>
-
-    <section class="container highlight">
-      <div class="highlight-text">
-        <h2>¿Listo para sorprender?</h2>
-        <p>Elige entre más de 12 estilos artísticos y 5 formatos distintos. Nuestro equipo te acompaña en cada paso para que recibas una pieza que amarás.</p>
-      </div>
-      <a class="btn" href="personalizar.html">Personalizar mi producto</a>
+      <article class="product-card">
+        <span class="product-tag">🧥 Hoodie personalizado</span>
+        <h2>€18,000</h2>
+        <p>Capucha forrada y bolsillos térmicos para abrazar a tu peludo a cada paso.</p>
+        <a class="btn" href="personalizar.html">Personalizar</a>
+      </article>
     </section>
   </main>
 
